# ChangeLog for dev-python/pyPdf
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyPdf/ChangeLog,v 1.5 2009/12/20 23:14:53 arfrever Exp $

  21 Dec 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  pyPdf-1.12.ebuild:
  Set SUPPORT_PYTHON_ABIS.

  28 Apr 2009; Zac Medico <zmedico@gentoo.org> pyPdf-1.12.ebuild:
  Block =app-text/calibre-0.5.9 due to file collision (bug #258938).

  12 Feb 2009; Sébastien Fabbro <bicatali@gentoo.org> metadata.xml,
  pyPdf-1.12.ebuild:
  Added ~amd64, closing bug #258489

  07 Jan 2009; Zac Medico <zmedico@gentoo.org> pyPdf-1.12.ebuild:
  Bug #254092 - Fix incorrect SRC_URI path.

*pyPdf-1.12 (06 Jan 2009)

  06 Jan 2009; Andrey Grozin <grozin@gentoo.org> +metadata.xml,
  +pyPdf-1.12.ebuild:
  Initial import
